--- a/CalcStyle.css
+++ b/CalcStyle.css
@@ -15,11 +15,15 @@
 }
 
 @media only screen and (max-width: 1000px){
+    body{
+        background-color: rgb(51, 51, 51);
+    }
     #thetext {
-        border-style: solid;
         font-size: 120px;
+        color: white;
         height: 30%;
-        width: 100%;
+        width: 85%;
+        margin-left: 10%;
     
     }
     .number{
@@ -27,6 +31,7 @@
         height: 200px;
         font-size: 100px;
         border-radius: 50%;
+        margin: 10px;
 
     }
     .editor{
@@ -36,26 +41,29 @@
         border-radius: 50%;
         background-color: grey;
         color: white;
+        margin: 10px;
     }
     .operator{
         width: 200px;
         height: 200px;
+   
         font-size: 100px;
         background-color: orange;
         color: white;
         border-radius: 50%;
+        margin: 10px;
     }
     #buttonBox{
         width: 100%;
         height: 50%;
-        padding-left: 50px;
-        padding-top: 10px;
-        padding-bottom: 10px;
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-top: 5%;
     
     }
     #main{
         width: 95%;
-        border-style: solid;
+        height: 95%;
         margin-top: 20%;
     }
 }
